--- a/gästeliste.toml
+++ b/gästeliste.toml
@@ -33,7 +33,6 @@ attending = ["aFTERNOON", "dINNER", "hIKE"]
 name = "Visu und Nina"
 is-invited-by-paper = true
 is-invited-to-hike = true
-attending = ["aFTERNOON", "dINNER", "hIKE"]
 [[guests]]
 name = "David"
 is-invited-by-paper = true
@@ -46,6 +45,8 @@ is-invited-to-hike = true
 name = "Fabian und Anja"
 is-invited-by-paper = true
 is-invited-to-hike = true
+attending.fabian = ["hahaha", "das", "hend", "dini", "tests", "nid", "abgfange"]
+attending.anja = ["aFtErNoOn", "dInNeR", "hIkE"]
 [[guests]]
 name = "Remo"
 attending = ["afternoon", "dinner", "hike"]
